adds modus library

--- a/apps/site/src/app/app.component.html
+++ b/apps/site/src/app/app.component.html
@@ -1,2 +1,3 @@
 
-  <alacarta-nx-welcome></alacarta-nx-welcome>
+<!--  <alacarta-nx-welcome></alacarta-nx-welcome>-->
+<modus-horizontal-navigation-bar></modus-horizontal-navigation-bar>
