--- a/apps/site/src/app/app.component.html
+++ b/apps/site/src/app/app.component.html
@@ -1,44 +1,26 @@
-<div class="drawer">
-    <input id="my-drawer-3" type="checkbox" class="drawer-toggle" />
-    <div class="drawer-content flex flex-col">
-        <!-- Navbar -->
-        <div class="w-full navbar bg-base-300">
-            <div class="flex-none lg:hidden">
-                <label for="my-drawer-3" class="btn btn-square btn-ghost">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="inline-block w-6 h-6 stroke-current"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path></svg>
-                </label>
-            </div>
-            <div class="flex-1 px-2 mx-2">Navbar Title</div>
-            <div class="flex-none hidden lg:block">
-                <ul class="menu menu-horizontal">
-                    <!-- Navbar menu content here -->
-                    <li><a>Navbar Item 1</a></li>
-                    <li><a>Navbar Item 2</a></li>
-                </ul>
-            </div>
-        </div>
-        <!-- Page content here -->
-        Content
-        <button class="btn btn-primary">Hello daisyUI</button>
-        <button class="btn btn-secondary">btn-secondar</button>
-        <button class="btn btn-accent">btn-accent</button>
-        <button class="btn btn-neutral">Hello daisyUI</button>
-        <button class="btn btn-info">Hello daisyUI</button>
-        <button class="btn btn-success">Hello daisyUI</button>
-        <button class="btn btn-warning">btn-warning</button>
-        <button class="btn btn-error">Hello daisyUI</button>
+
+    <div class="navbar bg-base-300 w-full">
+      <div class="navbar-start"></div>
+      <div class="navbar-center">
+        <a class="btn btn-ghost normal-case text-xl">Code Machina</a>
+      </div>
+      <div class="navbar-end"></div>
     </div>
-    <div class="drawer-side">
-        <label for="my-drawer-3" class="drawer-overlay"></label>
-        <ul class="menu p-4 overflow-y-auto w-80 bg-base-100">
-            <!-- Sidebar content here -->
-            <li><a>Sidebar Item 1</a></li>
-            <li><a>Sidebar Item 2</a></li>
 
-        </ul>
+    <!-- Page content here -->
+    <main class="container mx-auto px-4 py-4">
+      Content
+      <button class="btn btn-primary">btn-primary</button>
+      <button class="btn btn-secondary">btn-secondary</button>
+      <button class="btn btn-accent">btn-accent</button>
+      <button class="btn btn-neutral">Hello daisyUI</button>
+      <button class="btn btn-info">Hello daisyUI</button>
+      <button class="btn btn-success">Hello daisyUI</button>
+      <button class="btn btn-warning">btn-warning</button>
+      <button class="btn btn-error">Hello daisyUI</button>
 
-    </div>
-</div>
+      <modus-horizontal-navigation-bar></modus-horizontal-navigation-bar>
+      <router-outlet></router-outlet>
 
+    </main>
 
-<modus-horizontal-navigation-bar></modus-horizontal-navigation-bar>
