--- a/apps/site/src/app/app.component.html
+++ b/apps/site/src/app/app.component.html
@@ -1,14 +1,138 @@
+<!--&lt;!&ndash; Navbar &ndash;&gt;-->
+<!--<div class="w-full navbar bg-base-300">-->
+<!--    <div class="navbar-start"></div>-->
+<!--    <div class="navbar-center">-->
+<!--        <a class="btn btn-ghost normal-case text-xl">Code Machina</a>-->
+<!--    </div>-->
+<!--    <div class="navbar-end"></div>-->
+<!--</div>-->
+<!--<main class="container mx-auto flex-col">-->
+<!--    <aside class="flex-1 overflow-y-auto bg-base-300">-->
+<!--        <nav class="px-2 py-2 space-y-1">-->
+<!--            &lt;!&ndash; Current: "bg-indigo-800 text-white", Default: "text-indigo-100 hover:bg-indigo-600" &ndash;&gt;-->
+<!--            <a href="#"-->
+<!--               class="bg-indigo-800 text-white group flex items-center px-2 py-2 text-base font-medium rounded-md">-->
+<!--                &lt;!&ndash; Heroicon name: outline/home &ndash;&gt;-->
+<!--                <svg class="mr-4 flex-shrink-0 h-6 w-6 text-indigo-300" xmlns="http://www.w3.org/2000/svg"-->
+<!--                     fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"-->
+<!--                     aria-hidden="true">-->
+<!--                    <path stroke-linecap="round" stroke-linejoin="round"-->
+<!--                          d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"/>-->
+<!--                </svg>-->
+<!--                Dashboard-->
+<!--            </a>-->
 
-    <div class="navbar bg-base-300 w-full">
-      <div class="navbar-start"></div>
-      <div class="navbar-center">
-        <a class="btn btn-ghost normal-case text-xl">Code Machina</a>
-      </div>
-      <div class="navbar-end"></div>
+<!--        </nav>-->
+<!--    </aside>-->
+<!--    <router-outlet></router-outlet>-->
+<!--</main>-->
+<div class="bg-base-300 drawer drawer-mobile">
+    <input id="drawer" type="checkbox" class="drawer-toggle"/>
+    <div
+            class="drawer-content"
+            style="scroll-behavior: smooth; scroll-padding-top: 5rem"
+    >
+        <div
+                class="sticky top-0 z-30 flex h-16 w-full justify-center bg-opacity-90 backdrop-blur transition-all duration-100 bg-base-300 text-base-content shadow-sm"
+        >
+            <nav class="navbar w-full bg-base-300">
+                <div class="flex flex-1 md:gap-1 lg:gap-2">
+          <span
+                  class="tooltip tooltip-bottom before:text-xs"
+                  data-tip="Menu"
+          >
+            <label
+                    for="drawer"
+                    class="btn btn-square btn-ghost drawer-button lg:hidden"
+            ><svg
+                    width="20"
+                    height="20"
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    class="inline-block h-5 w-5 stroke-current md:h-6 md:w-6"
+            >
+                <path
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        stroke-width="2"
+                        d="M4 6h16M4 12h16M4 18h16"
+                ></path></svg></label
+            ></span>
+                    <div class="flex items-center gap-2 lg:hidden">
+                        <a
+                                href="/"
+                                aria-current="page"
+                                aria-label="Homepage"
+                                class="flex-0 btn btn-ghost px-2"
+                        >
+                            <div
+                                    class="font-title text-primary inline-flex text-lg transition-all duration-200 md:text-3xl"
+                            >
+                                <span class="lowercase text-primary">Code</span>
+                                <span class="uppercase text-base-content">Machina</span>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </nav>
+        </div>
+        <main class="py-8 px-8">
+            <div class="border-4 border-dashed border-gray-200 rounded-lg h-96">
+                <router-outlet></router-outlet>
+            </div>
+        </main>
+
     </div>
-
-    <!-- Page content here -->
-    <main class="container mx-auto px-4 py-4">
-      <router-outlet></router-outlet>
-    </main>
-
+    <div
+            class="drawer-side"
+            style="scroll-behavior: smooth; scroll-padding-top: 5rem"
+    >
+        <label for="drawer" class="drawer-overlay"></label>
+        <aside class="bg-base-300 w-80">
+            <div
+                    class="z-20 bg-base-300 bg-opacity-90 backdrop-blur sticky top-0 items-center gap-2 px-4 py-2 hidden lg:flex"
+            >
+                <a
+                        href="/"
+                        aria-current="page"
+                        aria-label="Homepage"
+                        class="flex-0 btn btn-ghost px-2"
+                >
+                    <div
+                            class="font-title text-primary inline-flex text-lg transition-all duration-200 md:text-3xl"
+                    >
+                        <span class="lowercase">code</span>
+                        <span class="text-base-content uppercase">machina</span>
+                    </div>
+                </a>
+            </div>
+            <div
+                    class="bg-base-300 sticky top-0 z-10 grid grid-row-2 gap-y-2 w-full bg-opacity-90 py-3 px-2 backdrop-blur"
+            ></div>
+            <ul class="menu menu-compact flex flex-col p-0 px-4 bg-base-300">
+                <li>
+                    <a href="/docs/install" id="" class="flex gap-4"
+                    ><span class="flex-none"
+                    ><svg
+                            width="24"
+                            height="24"
+                            xmlns="http://www.w3.org/2000/svg"
+                            fill="none"
+                            viewBox="0 0 24 24"
+                            class="w-6 h-6 stroke-current"
+                    >
+                <path
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        stroke-width="2"
+                        d="M8 4H6a2 2 0 00-2 2v12a2 2 0 002 2h12a2 2 0 002-2V6a2 2 0 00-2-2h-2m-4-1v8m0 0l3-3m-3 3L9 8m-5 5h2.586a1 1 0 01.707.293l2.414 2.414a1 1 0 00.707.293h3.172a1 1 0 00.707-.293l2.414-2.414a1 1 0 01.707-.293H20"
+                ></path></svg
+                    ></span>
+                        <span class="flex-1">Getting Started</span>
+                    </a>
+                </li>
+            </ul>
+        </aside>
+    </div>
+</div>
