--- a/libs/feature-generators/src/lib/home-page/home-page.component.html
+++ b/libs/feature-generators/src/lib/home-page/home-page.component.html
@@ -1,1 +1,7 @@
 <p>home-page works!</p>
+<button class="btn btn-primary" (click)="generate()">
+    Generate!
+</button>
+<pre>
+    {{template}}
+</pre>
